--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 
             <nav>
                 <ul>
-                    <li><a href="about.html">about</a></li>
+                    <li><a href="index.html" class="currentpage">Home</a></li>
+                    <li><a href="robinboyd.html">Robin Boyd</a></li>
                     <li><a href="history.html">History</a></li>
                     <li><a href="gallery.html">Gallery</a></li>
                 </ul>
@@ -24,16 +25,18 @@
         </div>
     </header>
 
+    <div class="hero">
+        <!-- img in css -->
+    </div>
+
     <main>
         <div class="wrapper">
 
             <h1>Churchill House </h1>
 
 
-            <!-- <img src="assets/images/churchill-house-33.jpg" alt="churchill outlook">
-<img src="assets/images/churchill-house-34.jpg" alt="">
-     <img src ="assets/images/churchill-house-38.jpg" alt=""> </!-->
-
+            <img src="assets/images/churchill-house-33.jpg" alt="churchill intro" class="leftimg">
+            <img src="assets/images/churchill-house-21.jpg" alt="churchill intro2" class="rightimg">
 
             <p>Churchill House, at 216 Northbourne Avenue in Braddon, was designed by <a href="robinboyd.html">Robin Boyd</a> for the Winston Churchill Memorial Trust of Australia in 1969-70, and construction was completed in 1971. It was Boyd's last major commission, and he died prior to its completion. It is one of a small number of larger designs produced by Boyd and was Canberra's first brutalist building.</p>
 
@@ -41,6 +44,9 @@
             </p>
 
             <p>Although it has undergone some alterations over the years, the building still displays key features of the brutalist style with its large areas of blank wall and use off-form concrete, sloping structural fins and precast concrete non-loadbearing wall panels, precast fins for sun protection, and vertical slit windows. Churchill House displays a fairly restrained form in comparison with the major Canberra buildings that followed in this style: Cameron Offices, National Gallery of Australia and High Court of Australia.</p>
+
+            <img src="assets/images/churchill-house-24.jpg" alt="churchill intro3" class="bottomimg">
+
         </div>
     </main>
 
