--- a/robinboyd.html
+++ b/robinboyd.html
@@ -44,25 +44,31 @@
 
             <p>Boyd’s residential designs that are registered on the ACT Heritage Register include:</p>
 
-            <p>- Manning Clark’s House, 11 Tasmania Circle, Forrest (1952);</p>
+            <ul>
 
-            <p>- Fenner House, 8 Monaro Crescent, Red Hill (1953); and</p>
+                <li>Manning Clark’s House, 11 Tasmania Circle, Forrest (1952);</li>
 
-            <p>- Eltringham House, 12 Marawa Place, Aranda (1968-69).</p>
+                <li>Fenner House, 8 Monaro Crescent, Red Hill (1953); and</li>
+
+                <li>Eltringham House, 12 Marawa Place, Aranda (1968-69).</li>
+            </ul>
+
 
             <p>He is also credited with the following designs in the ACT:</p>
 
-            <p>- Dr Hilary Roche House, Bedford Street, Deakin (1954);</p>
+            <ul>
+                <li>Dr Hilary Roche House, Bedford Street, Deakin (1954);</li>
 
-            <p>- Zoology building ANU (1961);</p>
+                <li>Zoology building ANU (1961);</li>
 
-            <p>- three houses in Vasey Crescent, Campbell (1961) (Grounds & Boyd);</p>
+                <li>three houses in Vasey Crescent, Campbell (1961) (Grounds & Boyd);</li>
 
-            <p>- W G Verge House, 204 Monaro Crescent, Red Hill (1963);</p>
+                <li>W G Verge House, 204 Monaro Crescent, Red Hill (1963);</li>
 
-            <p>- 204 Monaro Crescent, Red Hill (1964); and</p>
+                <li>204 Monaro Crescent, Red Hill (1964); and</li>
 
-            <p>- Zoology Building ANU (1963-8).</p>
+                <li>Zoology Building ANU (1963-8).</li>
+            </ul>
 
             <p>In the 1960s he started to move away from the glass box functionalism of the International and Melbourne Regional styles arguing that it had a limited range of expression and instead tried, somewhat unsuccessfully, to land large prestigious commissions for advanced high-rise buildings. He submitted many designs, but few were successful. Those that he did win tended to be of a more moderate size, such as the Menzies College at La Trobe University or <a href="gallery.html">Churchill House</a>. Taylor (1990:80) notes that Boyd’s interest in Brutalism was heavily influenced by his travels in Japan and he became known as the chief advocate in Australia for the “vigorous, concrete buildings of post-war Japan”, but goes on to note that his own attempts at major Brutalist designs show “...a somewhat crude, unexpressive, Brutalist aesthetic. </p>
 
