--- a/history.html
+++ b/history.html
@@ -37,9 +37,11 @@
 
             <p>The building was to provide offices for the Trust and in addition was to provide rental office accommodation for commercial tenants as a means of generating income for the Trust. Features of the original design included:</p>
 
-            <p>- a glass exhibition pavilion, on the site of the current north wing, which housed a display on the work of the Trust;</p>
-            <p>- the flat roof area of the east and south wings which was intended to be a roof terrace; and</p>
-            <p>- accommodation in the building included a board room, dining room, reception area, bar and kitchen.</p>
+            <ul>
+                <li>a glass exhibition pavilion, on the site of the current north wing, which housed a display on the work of the Trust;</li>
+                <li>the flat roof area of the east and south wings which was intended to be a roof terrace; and</li>
+                <li>accommodation in the building included a board room, dining room, reception area, bar and kitchen.</li>
+            </ul>
 
             <p>The cost of the works was about $1 million. The building was officially opened on 14 April 1972.</p>
 
@@ -52,14 +54,17 @@
             <p>During the 1990s(?) the glass pavilion was replaced by the current north wing.</p>
 
             <p>Churchill House is one of a number of Canberra buildings designed in the Late Twentieth Century Brutalist style. These include:</p>
+            <ul>
 
-            <p>- National Gallery of Australia, 1971;</p>
+                <li>National Gallery of Australia, 1971;</li>
 
-            <p>- Cameron Offices, 1976;</p>
+                <li>Cameron Offices, 1976;</li>
 
-            <p>- Canberra School of Music, 1976; and</p>
+                <li>Canberra School of Music, 1976; and</li>
 
-            <p>- High Court of Australia, 1980.</p>
+                <li>High Court of Australia, 1980.</li>
+
+            </ul>
 
             <p>Churchill House is an early example in this context, and one of only two examples of an office building. While Brutalism has been described as an ethic rather than an aesthetic (Banham 1966:10), both office buildings display a more restrained form compared to the other buildings, several of which were intended to portray a distinctive image in the national capital.</p>
             <img src="assets/images/churchill-house-20.jpg" alt="churchill floorplan2" class="bottomimg">
