--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
             <p>The complex comprises a number of components: the main building with its east and south wings, the separate north wing or pavilion, the pool and the rear carpark. The main building forms an L shape in plan, and with the north wing it encloses on three sides a courtyard in which the pool is located. The main building is of three storeys with a four storey lift tower at the southeast corner, the north wing is of two storeys, and the carpark is two storeyed.</p>
 
-            <p>Main Building</p>
+            <h3>Main Building</h3>
 
             <p>The main building displays several different elevational treatments. The elevations facing onto the pool area feature floor to ceiling glass with minimal black metal frames to the lowest level, and precast vertical panels on the upper two storeys. Each panel has a projecting fin and are relatively narrow, with the overall affect being of closely spaced vertical fins. Beside the fins are narrow, slot windows providing minimal outlook onto the pool area.</p>
 
@@ -65,7 +65,7 @@
 
             <img src="assets/images/churchill-house-18.jpg" alt="churchill section" class="bottomimg">
 
-            <p>North Wing</p>
+            <h3>North Wing</h3>
 
             <p>The north wing replaces an earlier pavilion on the same location. The current wing is a two storey structure with a flat metal deck roof set behind a parapet. The wing has an encircling steel colonnade which supports the roof and parapet. The walls are set back from the colonnade and feature flush-mounted glazing set in thin black metal frames, with textured off-form concrete spandrels, similar to the south wall of the south wing. There is an enclosed link between the north and east wings at the ground floor level.</p>
 
@@ -79,7 +79,7 @@
 
             <img src="assets/images/churchill-house-17.jpg" alt="churchill section2" class="bottomimg">
 
-            <p>Stylistic Analysis</p>
+            <h3>Stylistic Analysis</h3>
 
             <p>Churchill House displays several key features of the Late Twentieth Century Brutalist style as follows.</p>
 
@@ -89,23 +89,28 @@
 
             <p>In addition, it displays a number of the other features of this style.</p>
 
-            <p>- Sloping structural fins, being the structural steel members supporting the glazing at the corner between the east and south wings.</p>
+            <ul>
+                <li>Sloping structural fins, being the structural steel members supporting the glazing at the corner between the east and south wings.</li>
 
-            <p>- Precast concrete non-loadbearing wall panels, being the cladding to the wings facing the pool area.</p>
+                <li>Precast concrete non-loadbearing wall panels, being the cladding to the wings facing the pool area.</li>
 
-            <p>- Precast fins for sun protection, as above.</p>
+                <li>Precast fins for sun protection, as above.</li>
 
-            <p>- Vertical slit windows, also being a part of the cladding to the wings facing the pool area.</p>
+                <li>Vertical slit windows, also being a part of the cladding to the wings facing the pool area.</li>
+            </ul>
 
             <p>The building generally appears to be in fair to good condition. A number of changes have been made which diminish its integrity including:</p>
 
-            <p>- the replacement of the original glass pavilion with the current north wing, albeit with a sympathetic design;</p>
+            <ol>
+                <li>the replacement of the original glass pavilion with the current north wing, albeit with a sympathetic design;</li>
 
-            <p>- the non-original window-mounted airconditioners which detract from the south elevation;</p>
+                <li>the non-original window-mounted airconditioners which detract from the south elevation;</li>
 
-            <p>- many of the interior fitouts appear to have been modernised; and</p>
+                <li>many of the interior fitouts appear to have been modernised; and
+                </li>
 
-            <p>- there are a number of non-original surface mounted conduits internally.</p>
+                <li>there are a number of non-original surface mounted conduits internally.</li>
+            </ol>
 
             <p>None the less, the building retains substantial components and details of the original design.</p>
 
@@ -113,9 +118,11 @@
 
             <p>Churchill House is a good example of the Late Twentieth Century Brutalist style, (1960-), displaying several key features as follows:</p>
 
-            <p>- Large areas of blank wall, especially the west wall of the south wing.</p>
+            <ul>
+                <li>Large areas of blank wall, especially the west wall of the south wing.</li>
 
-            <p>- Off-form concrete, such as the west wall of the south wing and the spandrels to the south and east wings.</p>
+                <li>Off-form concrete, such as the west wall of the south wing and the spandrels to the south and east wings.</li>
+            </ul>
 
             <p>In addition, it displays a number of the other features of this style including: sloping structural fins, precast concrete non-loadbearing wall panels, precast fins for sun protection, and vertical slit windows. Churchill House is one of several Canberra examples of this style, and one of only two which display a restrained form reflecting, perhaps, a more conservative approach to the style because of the intended office use.</p>
             <p>The architecture of this building may contribute to the education of designers in their understanding of Late Twentieth-Century Architectural Styles.</p>
